# asgi-monitor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  quickstart.rst
docs/deployment/: index.rst
docs/integrations/: index.rst
docs/logging/: index.rst
docs/metrics/: index.rst
docs/monitoring/: logging.rst  metrics.rst  tracing.rst
docs/overview/: index.rst
docs/quickstart/: index.rst  metrics.rst  tracing.rst
docs/tracing/: index.rst
examples/: aiohttp_app.py  asgi_app.py  fastapi_app.py  gunicorn_server.py  litestar_app.py  starlette_app.py  uvicorn_server.py
examples/real_world/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
examples/real_world/app/: main.py
examples/real_world/app/routes/: __init__.py  error.py  healthcheck.py  slow.py
examples/real_world/grafana/dashboards/: api-metrics.json
examples/real_world/grafana/provisioning/dashboards/: dashboards.yaml
examples/real_world/grafana/provisioning/datasources/: datasource.yaml
examples/real_world/loki/: config.yaml
examples/real_world/prometheus/: prometheus.yml
examples/real_world/vector/: vector.toml
src/asgi_monitor/: cli.py
src/asgi_monitor/integrations/: aiohttp.py  fastapi.py  litestar.py  starlette.py
src/asgi_monitor/logging/: __init__.py  _default_processors.py  _processors.py  _trace_processor.py  configure.py  trace_processor.py
src/asgi_monitor/logging/aiohttp/: __init__.py  logger.py
src/asgi_monitor/logging/gunicorn/: __init__.py  logger.py  worker.py
src/asgi_monitor/logging/uvicorn/: __init__.py  log_config.py  worker.py
src/asgi_monitor/metrics/: __init__.py  _container.py  config.py  container.py  get_latest.py  manager.py
src/asgi_monitor/tracing/: __init__.py  config.py  decorator.py  middleware.py
tests/: utils.py
tests/integration/: conftest.py  factory.py  utils.py
tests/integration/aiohttp/: conftest.py  test_logger.py  test_middlewares.py
tests/integration/fastapi/: test_middlewares.py
tests/integration/litestar/: test_middlewares.py
tests/integration/starlette/: test_middlewares.py
tests/integration/uvicorn/: conftest.py  test_log_config.py  test_log_config_cli.py  test_logging.py
tests/logging/: conftest.py  test_default_console.py  test_default_json.py  test_uvicorn.py  utils.py
tests/metrics/: conftest.py  test_container.py  test_get_latest.py  test_metrics.py
tests/unit/: test_ci.py
tests/unit/logging/: test_default_console.py  test_default_json.py  test_gunicorn_config.py  test_uvicorn.py
tests/unit/metrics/: conftest.py  test_get_latest.py  test_metrics.py
tests/unit/tracing/: conftest.py  test_middleware.py  test_span_decorator.py
