[project]
name = "asgi-monitor"
version = "0.0.1"
description = "Quick and easy monitoring setup for ASGI application"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "treaditup", email = "treaditup@gmail.com"},
]
dependencies = [
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "opentelemetry-instrumentation-logging>=0.44b0",
    "opentelemetry-instrumentation-asgi>=0.44b0",
]

[project.urls]
Repository = "https://github.com/draincoder/asgi-monitor"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.2.2",
    "mypy>=1.8.0",
    "pre-commit>=3.6.2",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version="py310"
src = ["src"]
include = ["src/**.py", "tests/**.py"]

lint.select = [
    "ALL",
]

lint.ignore = [
    "ARG",
    "ANN",
    "D",
    "EM101",
    "EM102",
    "PT001",
    "PT023",
    "SIM108",
    "SIM114",
    "TRY003",
    "PLW2901",
    "RET505",
    "ISC001",
    "FBT001",
    "FBT002",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["src", "tests", "examples"]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
packages = ["src", "tests"]
python_version = "3.10"

strict = true
pretty = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true
warn_unreachable = true
